# feature-store

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
notebooks/: Demoing Featurestore.ipynb  add_data.py  featurestore.yaml  get_data.py  register_features.py
src/feature_store/: __init__.py  client.py  exceptions.py  feature.py
src/feature_store/auth/: __init__.py  base.py  file_auth.py
src/feature_store/backends/: base.py  db.py  local.py
src/feature_store/feature_storage/: __init__.py  base.py  parquet.py  sql.py
src/feature_store/registry_backends/: base.py  db.py  local.py
src/feature_store/stores/: __init__.py  base.py  parquet.py  sql.py
tests/: conftest.py  test_auth.py  test_client.py  test_database_feature_storage.py  test_db_storage_backend.py  test_feature.py  test_feature_group.py  test_local_storage_backend.py
tests/feature_storage/: test_parquet_feature_storage.py  test_sql_feature_storage.py
tests/registry_backends/: test_database_registry_backend.py  test_local_registry_backend.py
