[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "feature-store"
description = 'A Featurestore client'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
    { name = "Anders Bogsnes", email = "andersbogsnes@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["pyarrow", "pandas", "polars", "pyyaml", "sqlalchemy"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest", "tox", "pre-commit", "mypy"]

[project.urls]
Documentation = "https://github.com/andersbogsnes/feature-store#readme"
Issues = "https://github.com/andersbogsnes/feature-store/issues"
Source = "https://github.com/andersbogsnes/feature-store"

[tool.hatch.version]
source = "vcs"


[tool.coverage.run]
branch = true
parallel = true
omit = [
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true
